AUTOMAKE_OPTIONS = foreign no-dependencies

EXTRA_DIST = bhv.gif bon-marche.gif cluny.gif forum-des-halles.gif galeries-lafayettes.gif louvre.gif louvre2.gif madeleine.gif mosquee.gif notre-dame.gif orsay.gif picasso.gif pompidou.gif printemps.gif rodin.gif sacre-coeur.gif saint-germain.gif sainte-chapelle.gif samaritaine.gif tour-eiffel.gif emacs.gif lemacs.gif ubit.gif world2.gif xfig2.gif folder2.gif page2.gif world.gif metal.gif xfig.gif frisco.gif paris-metro.gif 


