AUTOMAKE_OPTIONS = foreign no-dependencies

EXTRA_DIST = ubit.html slide001.html slide002.html slide003.html slide004.html slide005.html slide006.html slide007.html slide008.html slide009.html slide010.html slide011.html slide012.html slide013.html slide014.html slide015.html slide016.html slide017.html slide018.html slide019.html slide020.html slide021.html slide022.html slide023.html slide024.html slide025.html slide026.html img/menu-with-text.gif img/text-with-scroll.gif img/multi-text.gif img/color-menu.gif img/shared-bricks.gif img/shared-gadgets.gif img/amazon.jpg img/anatomy.gif img/ubit-lensmap.jpg img/ubit-persp1.jpg img/transp-dialog.jpg img/transp-menu.gif img/transp-scroll.gif img/ubit-transptool.jpg img/vreng.jpg css/dark-slide.css css/no-arrow.gif css/slide.css css/white-slide.css css/left-arrow.gif css/right-arrow.gif css/up-arrow.gif
